--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,9 +16,18 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       - uses: erlef/setup-beam@v1
         with:
           otp-version: '25'
           elixir-version: '1.14.2'
       - run: mix deps.get
       - run: mix test
+
+      # generate credo static analysis and output to html file
+      - run: pip3 install ansi2html
+      - run: script -q /dev/null mix credo --strict | ansi2html --t Credo -a -s solarized > credo.html
+
+      
