add ex_doc docs generation

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,7 @@ jobs:
       - run: mix deps.get
       - run: mix test
       - run: mix coveralls.html
+      - run: mix doc
       
       - run: pip3 install ansi2html
 
